Removed GUI dependency.